kustomizations/grapher/gremlinserver-neo4j/base/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gremlinserver-auth
spec:
  basicAuth:
    secret: htpasswd-gremlinserver
